# Py_Ncorr

./: Dockerfile  Dockerfile.celeryworker  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
bindings/: py_ncorr_algorithms_bindings.cpp  py_ncorr_core_bindings.cpp
config_files/: nginx_ncorr.conf
cpp_src/ncorr_lib/: ncorr_datatypes.cpp  ncorr_datatypes.h  ncorr_lib.h  standard_datatypes.h
cpp_src/shims/: mex.h
cpp_src/shims/shims/: matlab_shim.h
ncorr_app/: __init__.py
ncorr_app/algorithms/: __init__.py  dic_orchestrator.py  postprocessing.py  seed_manager.py
ncorr_app/core/: __init__.py  datatypes.py  image.py  roi.py  utils.py
ncorr_app/web/: app_factory.py  config.py
ncorr_app/web/tasks/: dic_tasks.py
ncorr_python_webapp/: requirements.txt  setup.py
ncorr_python_webapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ncorr_python_webapp/bindings/: py_ncorr_algorithms_bindings.cpp  py_ncorr_core_bindings.cpp
ncorr_python_webapp/ncorr_app/algorithms/: __init__.py  dic_proc.py  post_proc.py
ncorr_python_webapp/ncorr_app/core/: __init__.py  datatypes.py  image.py  roi.py  utils.py
ncorr_python_webapp/webapp/: __init__.py  app.py  tasks.py
ncorr_python_webapp/webapp/apis/v1/: __init__.py  analysis_routes.py
tests/unit/: test_utils.py
webapp/: __init__.py  config.py  run.py
webapp/apis/: __init__.py
webapp/apis/v1/: __init__.py  routes_analysis.py
webapp/static/css/: ResultsViewer.css  ncorr.css
webapp/static/js/: AnalysisStatusDisplay.js  DICParametersForm.js  ImageDisplay.js  ImageUploader.js  NcorrApp.js  ROIEditor.js  ResultsViewer.js  SeedPreviewer.js  UnitConverter.js
webapp/tasks/: __init__.py
